crates/tree-sitter-yabo/test/corpus/simple.txt
=============
Simple Parser
=============

def [u8] ~> complex = {
  real: f32_el
  imag: f32_el
}

---

(source_file
  (parser_definition
    from: (type_array
      expr: (parserdef_ref
        name: (identifier)))
    name: (identifier)
    to: (parser_block
      content: (parser_sequence
        content: (parse_statement
	       name: (identifier)
	       parser: (identifier))
        content: (parse_statement
	       name: (identifier)
	       parser: (identifier))))))

=============
Choice Parser
=============

def [u8] ~> choice = {
  case
  | is ascii
    return: utf8char
  | return: utf8char
  \
}

---

(source_file
  (parser_definition
    from: (type_array
      expr: (parserdef_ref
        name: (identifier)))
    name: (identifier)
    to: (parser_block
      content: (parser_sequence
        content: (parser_choice
          content: (parser_sequence
            content: (parse_statement
              parser: (single_constraint_apply
                constraint: (identifier)))
            content: (parse_statement
              name: (retvrn)
              parser: (identifier)))
          content: (parser_sequence
            content: (parse_statement
                name: (retvrn)
                parser: (identifier))))))))


=============
Let Statement
=============

def [u8] ~> seven = {
  val: u8
  let return: u8 = 7
}

---

(source_file
  (parser_definition
    from: (type_array
      expr: (parserdef_ref
        name: (identifier)))
    name: (identifier)
    to: (parser_block
      content: (parser_sequence
        content: (parse_statement
  	      name: (identifier)
        	parser: (identifier))
        content: (let_statement
        	name: (retvrn)
        	ty: (parserdef_ref
            name: (identifier))
          expr: (number_literal))))))

=============
Nested Blocks
=============

def [u8] ~> nested = {
  val: ~
  return: {
    case
    | val: is 0
    | let val: u8 = 3
      ~
    \
    let return: u8 = val
  }
}

---

(source_file
  (parser_definition
    (type_array
      (parserdef_ref
        (identifier)))
    (identifier)
    (parser_block
      (parser_sequence
        (parse_statement
          (identifier)
          (single))
        (parse_statement
          (retvrn)
          (parser_block
            (parser_sequence
              (parser_choice
                (parser_sequence
                  (parse_statement
                    (identifier)
                    (single_constraint_apply
                      (number_literal))))
                (parser_sequence
                  (let_statement
                    (identifier)
                    (parserdef_ref
                      (identifier))
                    (number_literal))
                    (parse_statement
                      (single))))
              (let_statement
                (retvrn)
                (parserdef_ref
                  (identifier))
                (identifier)))))))))

=============
Three Choices
=============

def [u8] ~> three = {
  case
  | is 0
    return: u8
  | is 1
    return: u8
  | return: u8
  \
}

---
(source_file
  (parser_definition
    (type_array
      (parserdef_ref
        (identifier)))
    (identifier)
    (parser_block
      (parser_sequence
        (parser_choice
          (parser_sequence
            (parse_statement
              (single_constraint_apply
                (number_literal)))
            (parse_statement
              (retvrn)
              (identifier)))
          (parser_sequence
            (parse_statement
              (single_constraint_apply
                (number_literal)))
            (parse_statement
              (retvrn)
              (identifier)))
          (parser_sequence
            (parse_statement
              (retvrn)
              (identifier))))))))


=======
Comment
=======

# comment
def [u8] ~> test = {
   # comment
  x: u8?
 # comment
}

---

(source_file
  (comment)
  (parser_definition
    (type_array
      (parserdef_ref
        (identifier)))
    (identifier)
    (parser_block
      (comment)
      (parser_sequence
        (parse_statement
          (identifier)
          (bt_mark
            (identifier))))
      (comment))))


====
Args
====

def ~nonsense(x: int, y: int) = 1 + nonsense(3, 4)

---

(source_file
  (parser_definition
    from: (byte_slice)
    name: (identifier)
    argdefs: (arg_def_list
      args: (arg_definition
        name: (identifier)
        ty: (primitive_type))
      args: (arg_definition
        name: (identifier)
        ty: (primitive_type)))
    to: (binary_expression
      left: (number_literal)
      right: (fun_application
        applicant: (identifier)
        args: (number_literal)
        args: (number_literal)))))

===========
Array Index
===========

fun first_plus_one(arr: [u8]) = 1 + arr.[0]

---
(source_file
  (parser_definition
    name: (identifier)
    argdefs: (arg_def_list
      args: (arg_definition
        name: (identifier)
        ty: (type_array
          expr: (parserdef_ref
            name: (identifier)))))
    to: (binary_expression
      left: (number_literal)
      right: (binary_expression
        left: (identifier)
        right: (number_literal)))))
